Change main menu

--- a/MainExamples/MainExamples.csproj
+++ b/MainExamples/MainExamples.csproj
@@ -63,8 +63,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DesignPatterns.cs" />
+    <Compile Include="Definitions\Patterns.cs" />
     <Compile Include="Examples\SingletonExamples.cs" />
+    <Compile Include="Extensions\PatternsExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -105,5 +106,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
