--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-/Singleton/bin
-/Singleton/obj
-/.vs
-/MainExamples/obj
-/MainExamples/bin
-/Adapter/bin
-/Adapter/obj
-/Decorator/obj
-/Decorator/bin
-/TemplateMethod/bin
-/TemplateMethod/obj
-/FactoryMethod/bin
-/FactoryMethod/obj
+.vs
+bin
+obj
