--- a/Adapter/Adapter.csproj
+++ b/Adapter/Adapter.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>Nenov.DesignPatterns.Adapter</AssemblyName>
     <RootNamespace>Nenov.DesignPatterns.Adapter</RootNamespace>
   </PropertyGroup>
