--- a/MainExamples/MainExamples.csproj
+++ b/MainExamples/MainExamples.csproj
@@ -85,7 +85,7 @@
       <Project>{f8f76ff3-759e-4b2a-8d0b-2fe97e3bcc68}</Project>
       <Name>FactoryMethod</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Singleton\Singleton.csproj">
+    <ProjectReference Include="..\_Singleton\_Singleton.csproj">
       <Project>{ff293ced-c8d3-4cb1-af7a-8760c4f61ed7}</Project>
       <Name>Singleton</Name>
     </ProjectReference>
