--- a/Singleton/Singleton.csproj
+++ b/Singleton/Singleton.csproj
@@ -1,9 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>Nenov.DesignPatterns.Singleton</AssemblyName>
     <RootNamespace>Nenov.DesignPatterns.Singleton</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MainExamples\MainExamples.csproj" />
+  </ItemGroup>
 
 </Project>
